NA: Fix OpenAPI generated Docs (#2573)
* NA: Fix OpenAPI generated docs

* NA: Fix OpenAPI generated Docs

* NA: use script to remove unused schemas

* Rename classes to keep old name

* Revert change in properties order

* Merge branch 'main' into thiagohora/NA_fix_openapi_generated_docs
